--- a/public/index.html
+++ b/public/index.html
@@ -37,6 +37,8 @@
     <link rel="stylesheet" href="assets/css/slicknav.min.css" type="text/css">
     <link rel="stylesheet" href="assets/css/style.css" type="text/css">
 
+    <link rel="shortcut icon" href="assets/img/logo.png" />
+
 </head>
 
 <body>
